# HipKittens

./: .gitignore  .gitmodules  README.md  env.src
analysis/: README.md
analysis/attn/bkwd/: README.md  mi350x_data_to_log.json  plot.py  plot_hk_asm.py
analysis/attn/bkwd/archive/: data_to_log.json  mi355x_data_to_log.json  plot.py
analysis/attn/bkwd/archive/mi350x/: GQA_bkwd_4warps.cpp  GQA_bkwd_asm_interleaved.cpp  Makefile  test_aiter.py  test_tk.py
analysis/attn/bkwd/benchmark/: Makefile  attn_bkwd_causal_HBN.cpp  attn_bkwd_non_causal_HBN.cpp  mi355x_benchmark.sh  mi355x_gqa_bkwd_causal.json  mi355x_gqa_bkwd_non_causal.json  mi355x_mha_bkwd_causal.json  mi355x_mha_bkwd_non_causal.json
analysis/attn/bkwd/mi350x/: GQA_bkwd_asm_interleaved.cpp  Makefile  data_to_log.json  test_aiter.py  test_tk.py
analysis/attn/fwd/: README.md  plot.py  plot_d64.py
analysis/attn/fwd/benchmark/: Makefile  attn_fwd_causal_d64.cpp  attn_fwd_non_causal_d64.cpp  mi350x_gqa_causal_fwd.json  mi350x_gqa_non_causal_fwd.json  mi350x_mha_causal_fwd.json  mi350x_mha_non_causal_fwd.json  mi355x_d64_benchmark.sh  mi355x_d64_gqa_causal_fwd.json  mi355x_d64_gqa_non_causal_fwd.json  mi355x_d64_mha_causal_fwd.json  mi355x_d64_mha_non_causal_fwd.json  test_python.py
analysis/attn/fwd/mi350x/: Makefile  benchmark.sh  causal_gqa_kernel_1024.cpp  causal_gqa_kernel_16384.cpp  causal_gqa_kernel_2048.cpp  causal_gqa_kernel_4096.cpp  causal_mha_kernel_1024.cpp  causal_mha_kernel_16384.cpp  causal_mha_kernel_2048.cpp  causal_mha_kernel_4096.cpp  causal_mha_kernel_8192.cpp  data_to_log.json  gqa_kernel_1024.cpp  kernel_1024.cpp  kernel_2048.cpp  kernel_4096.cpp  kernel_8192.cpp  mha_kernel_1024.cpp  mha_kernel_16384.cpp  mha_kernel_2048.cpp  mha_kernel_4096.cpp  mha_kernel_8192.cpp  mi355x_benchmark.sh  mi355x_gqa_causal_fwd.json  mi355x_gqa_non_causal_fwd.json  mi355x_mha_causal_fwd.json  mi355x_mha_non_causal_fwd.json  test_python.py  utils.cpp
analysis/baselines/: README.md
analysis/baselines/attn/: backwards_baselines.py  triton_baseline_v01.py  triton_baseline_v02.py
analysis/baselines/gemm/: triton_gemm_v02.py
analysis/bf16_gemm/: mi300x_data_to_log.json  mi325x_data_to_log.json  plot.py
analysis/bf16_gemm/kernels/: data_to_log.json  kernel_2048.cpp  test_python.py
analysis/bf16_gemm/mi325x/: Makefile  data_to_log.json  kernel_1024.cpp  kernel_16384.cpp  kernel_2048.cpp  kernel_4096.cpp  kernel_8192.cpp  mi325x_bf16_gemm.json  plot.py  test_python.py
analysis/bf16_gemm/mi350x/: Makefile  None  README.md  analyze_prof.py  kernel_1024.cpp  kernel_16384.cpp  kernel_2048.cpp  kernel_4096.cpp  mi350x_bf16_gemm.json  mi355x_benchmark.sh  mi355x_bf16_gemm.json  profile.sh
analysis/blackwell/: bf16_plot_gemm.py  fp8_plot_gemm.py
analysis/blackwell/bf16/: Makefile  matmul.d  matmul_cublas.cu  test_gemm.py
analysis/blackwell/fp8/: Makefile  matmul_cubals_fp8.cu
analysis/fp6_gemm/: mi355x_fp6_gemm.json  numberswithhipblaslt.json  plot.py
analysis/fp8_gemm/: plot.py
analysis/fp8_gemm/mi350x/: mi355x_fp8_gemm.json
analysis/gemm/: plot.py
analysis/gemm/mi350x/: kernel_1024.cpp  kernel_2048.cpp  kernel_8192.cpp  mi350x_benchmark.sh  mi355x_bf16_gemm.json  test_python.py
analysis/layernorm/: plot.py
analysis/layernorm/mi350x/: README.md  kernel_1024.cpp  kernel_16384.cpp  kernel_2048.cpp  kernel_4096.cpp  kernel_8192.cpp  mi350x_benchmark.sh  mi350x_layernorm.json  mi355x_layernorm.json  test_python.py
analysis/paper_experiments/compile_time/: measure_compile_time.py
analysis/paper_experiments/phases/ds_read_b64/: README.md  bank_solver.py  kernel.cpp  phase_solver.py
analysis/rotary/: plot.py
analysis/rotary/mi350x/: Makefile  kernel_1024.cpp  kernel_16384.cpp  kernel_4096.cpp  kernel_8192.cpp  mi350x_benchmark.sh  mi350x_rotary.json  mi355x_rotary.json
distributed-kernels/: CMakeLists.txt  README.md
distributed-kernels/bf16_gemm/: example.py  kernel.cpp
docs/: README.md  launch_docker_mi350x.md  setup_mojo.md
docs/profiling/: README.md
include/common/: base_types.cuh  macros.cuh  util.cuh
include/ops/group/memory/tile/: global_to_shared.cuh
include/ops/group/memory/vec/: vec.cuh
include/ops/warp/memory/tile/: tile.cuh  (+3 more)
include/types/: types.cuh
include/types/global/: util.cuh
include/types/register/: rt.cuh  rt_base.cuh  rt_shape.cuh  rv.cuh
include/types/shared/: shared.cuh  st.cuh  st_layout.cuh  st_shape.cuh
kernels/HIP/gemm/fp16fp32/: warptiling.cpp
kernels/TK/attn/: README.md
kernels/TK/attn/gqa/: Makefile  README.md  kernel_d64.cpp  kernel_v3.cpp  kernel_v5.cpp  test_python.py
kernels/TK/attn/gqa_backwards/: GQA_bkwd.cpp  GQA_bkwd_asm.cpp  GQA_bkwd_v2.cpp  GQA_bkwd_v7.cpp  GQA_fwd.cpp  Makefile  attn_bkwd_prep.cpp  hammer.py  test_attn.py  test_python.py
kernels/TK/attn/gqa_causal/: Makefile  kernel.cpp  kernel_03.cpp  test_python.py
kernels/TK/attn/gqa_causal_backwards/: GQA_bkwd.cpp  test_attn.py
kernels/TK/attn/mi350x/: Makefile  kernel-v2.cpp  kernel-v3.cpp  kernel-v4.cpp  shared-kernel-v4.cpp  simple-kernel-v5.cpp  test_python.py
kernels/TK/layernorm/: test_python.py
kernels/TK/micro/: README.md  micro_03_3stage_syncthreads.cpp  micro_04_2stage_16wave.cpp
kernels/TK/micro/producer_consumer/: micro_08_async.cpp
kernels/TK/rotary/: Makefile  kernel_02.cpp  kernel_03.cpp  test_python.py
kernels/TK/rotary/archive/: kernel.cpp  kernel_02.cpp
kernels/attn/gqa/: kernel.cpp  kernel_d64.cpp  test_python.py
kernels/attn/gqa_backwards/: test_python.py
kernels/attn/gqa_causal/: kernel.cpp  kernel_d64.cpp  test_python.py
kernels/gemm/bf16fp32/mi350x/: test_python.py
kernels/layernorm/: Makefile
kernels/matmul/: utils.cpp
kernels/matmul/FP8/: matmul.cu
kernels/matmul/FP8_4wave/: Makefile  matmul.cu
kernels/matmul/FP8_4wave_splitk/: matmul.cu
kernels/matmul/FP8_8wave/: 8_wave.cu
tests/unit/: Makefile
tests/unit/testing_commons/: testing_commons.cuh  testing_flags.cuh  testing_utils.cuh
training/bert/models/: hipkittens.py
training/llama/: README.md
training/llama/llama/models/: gpt.py  mha.py  mlp.py
(+200 files in other folders)
